--- a/styles/globals.css
+++ b/styles/globals.css
@@ -187,3 +187,18 @@ h1 {
     color: red;
     font-weight: bold;
   } 
+
+  .btn-pay{
+      padding: 4px 10px;
+      border: 2px solid;
+      border-radius: 12px;
+      background-color: rgb(131, 119, 196);
+      color: white;
+      cursor: pointer;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%; /* 24px */
+      transition: background-color 0.3s ease;
+      min-width: 150px;                /* Minimum width for items */
+    }
